# GoIt_Web_HW_13

./: main.py  pyproject.toml
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 065570640e22_add_table_users.py  aff7e4b3ae71_init.py
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
templates/: index.html  main.html
templates/css/: style.html
tests/: confest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
